syntax = "proto3";
package milkyway.assets.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";
import "milkyway/assets/v1/models.proto";

option go_package = "github.com/milkyway-labs/milkyway/v2/x/assets/types";

// Msg defines the assets module's gRPC message service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // RegisterAsset defines the operation for registering an asset.
  rpc RegisterAsset(MsgRegisterAsset) returns (MsgRegisterAssetResponse);

  // DeregisterAsset defines the operation for de-registering an asset with
  // its denomination.
  rpc DeregisterAsset(MsgDeregisterAsset) returns (MsgDeregisterAssetResponse);
}

// MsgRegisterAsset defines the message structure for the RegisterAsset
// gRPC service method. It allows the authority to register an asset.
message MsgRegisterAsset {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "milkyway/MsgRegisterAsset";

  // Authority is the address that controls the module (defaults to x/gov unless
  // overwritten).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Asset represents the asset to be registered.
  Asset asset = 2 [ (gogoproto.nullable) = false ];
}

// MsgRegisterAssetResponse is the return value of MsgRegisterAsset.
message MsgRegisterAssetResponse {}

// MsgDeregisterAsset defines the message structure for the DeregisterAsset
// gRPC service method. It allows the authority to de-register an asset with
// the token denomination.
message MsgDeregisterAsset {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "milkyway/MsgDeregisterAsset";

  // Authority is the address that controls the module (defaults to x/gov unless
  // overwritten).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Denom represents the denomination of the token associated with the asset.
  string denom = 2;
}

// MsgRegisterAssetResponse is the return value of MsgDeregisterAsset.
message MsgDeregisterAssetResponse {}